@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-01-19T01:04:45Z",
-  "count_outdated" : 825,
-  "uniques_outdated" : 435,
+  "timestamp" : "2025-01-21T00:59:52Z",
+  "count_outdated" : 826,
+  "uniques_outdated" : 436,
   "count" : 828,
   "uniques" : 438,
   "clones" : [
-    {
-      "timestamp": "2025-01-07T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-01-08T00:00:00Z",
       "count": 1,
