@@ -1,3 +1,12 @@
+2025-01-21T00:59:52Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/12878085558 # 541
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-01-21
+* notice: last 14d: unq all: 2 2
+* notice: prev accum: outdated-unq outdated-all / unq all: 435 825 / 438 828
+* notice: next accum: outdated-unq outdated-all / unq all: 436 826 / 438 828
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2025-01-07] / []
+
 2025-01-19T01:04:45Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/12848973597 # 539
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-01-19
